hphp/test/zend/good/ext/posix/tests/posix_getgrgid_basic.php.skipif
<?php 
	if (!extension_loaded('posix')) die('skip - POSIX extension not loaded'); 
?>