hphp/test/zend/bad/ext/pdo_sqlite/tests/bug_42589.php.skipif
<?php
if (!extension_loaded('pdo') || !extension_loaded('pdo_sqlite')) die('skip not loaded');
?>